added basic template

--- a/www/colon.html
+++ b/www/colon.html
@@ -53,17 +53,19 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">HOME</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li class="active"><a href="faq.html">FAQ</a></li>
         <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
         <li><a href="admin.html">ADMIN</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-       <a role="button" href="app.html" class="btn btn-default btn-lg btn-block">What is this App?</a>
-        <a role="button" href="colon.html" class="btn btn-default btn-lg btn-block">What is a Colonoscopy?</a>
-        <a role="button" href="video.html" class="btn btn-success btn-lg btn-block">Video Tutorial</a>
-        <a role="button" href="prep.html" class="btn btn-danger btn-lg btn-block">Start Prep</a>
+        <h1> Colonoscopy </h1>
+        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+          <div class="container">
+            <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a></button>
+          </div>
+        </nav>
     </body> 
 </html>
