--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -47,57 +47,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <li class="active"><a href="index.html">HOME</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
+        <li><a href="admin.html">ADMIN</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-       <button type="button" class="btn btn-default btn-lg btn-block">What is this App?</button>
-        <button type="button" class="btn btn-default btn-lg btn-block">What is a Colonoscopy?</button>
-        <button type="button" class="btn btn-success btn-lg btn-block">Video Tutorial</button>
-        <button type="button" class="btn btn-danger btn-lg btn-block">Start Prep</button>
-        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-          <div class="container">
-            <button type="button" class="btn btn-primary btn-lg btn-block">Back</button>
-          </div>
-        </nav>
+       <a role="button" href="app.html" class="btn btn-default btn-lg btn-block">What is this App?</a>
+        <a role="button" href="colon.html" class="btn btn-default btn-lg btn-block">What is a Colonoscopy?</a>
+        <a role="button" href="video.html" class="btn btn-success btn-lg btn-block">Video Tutorial</a>
+        <a role="button" href="prep.html" class="btn btn-danger btn-lg btn-block">Start Prep</a>
     </body> 
 </html>
