started video tag

--- a/www/video.html
+++ b/www/video.html
@@ -62,6 +62,11 @@
   </div><!-- /.container-fluid -->
 </nav>
        <h1> Video </h1>
+       <video webkit-playsinline width="320" height="240" controls>
+            <source src="cdvfile://android_asset/www/video/mp4/prep.mp4" type="video/mp4">
+            <source src="cdvfile://android_asset/www/video/ogg/prep.ogg" type="video/ogg">
+            There was a problem playing the video
+        </video>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
             <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a></button>
