--- a/platforms/android/assets/www/video.html
+++ b/platforms/android/assets/www/video.html
@@ -25,9 +25,9 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <!-- CDN FILES -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+       <link rel="stylesheet" href="css/bootstrap.min.css">
+        <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <!-- LOCAL FILES -->
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <script type="text/javascript" src="cordova.js"></script>
@@ -62,6 +62,11 @@
   </div><!-- /.container-fluid -->
 </nav>
        <h1> Video </h1>
+       <video webkit-playsinline width="320" height="240" controls>
+            <source src="cdvfile://android_asset/www/video/mp4/prep.mp4" type="video/mp4">
+            <source src="cdvfile://android_asset/www/video/ogg/prep.ogg" type="video/ogg">
+            There was a problem playing the video
+        </video>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
             <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a></button>
