--- a/www/admin.html
+++ b/www/admin.html
@@ -18,102 +18,117 @@
     under the License.
 -->
 <html>
-    <head>
-        <title>Stony Brook Children's Hospital Colonoscopy Prep App</title>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <!-- CDN FILES -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- LOCAL FILES -->
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </head>
-    <body>
-        <!-- HEADER -->
-        <nav class="navbar navbar-default" role="navigation">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<head>
+    <title>Stony Brook Children's Hospital Colonoscopy Prep App</title>
+    <meta charset="utf-8"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
+    <!-- CDN FILES -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- LOCAL FILES -->
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
+</head>
+<body>
+<!-- HEADER -->
+<nav class="navbar navbar-default" role="navigation">
+
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
-            </div>
+            </button>
+            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+        </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
                 <li class="active"><a href="admin.html">ADMIN</a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
-        
-        <!-- CONTENT -->
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
 
-        Current Weight: <span id="currentWeight"></span>
-        <br> Current Appointment Date: <span id="currentDate"></span>
-        <br>
-        <br>
-        CHANGE
-        <br>
-        Weight:
-        <div class="radio">
-          <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios1" value="Less than 15kg" checked>
-            Less than 15kg
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios2" value="15-30kg">
-            15-30kg
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios3" value="Greater than 30kg">
-            Greater than 30kg
-          </label>
-        </div>
+<!-- CONTENT -->
 
-          Appointment: <input id="datePicker" type="date" name="bday">
-          <button id="submitButton">Update</button>
-          <p id="message"></p>
-        <!-- FOOTER -->
-        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-          <div class="container">
-            <a role="button" class="btn btn-primary btn-lg btn-block" href="index.html">HOME</a>
-          </div>
-        </nav>
-        <script>
-            if(window.localStorage.getItem("weight") !== null){
-                $("#currentWeight").html(window.localStorage.getItem("weight"));
-            }
-            if(window.localStorage.getItem("date") !== null){
-                $("#currentDate").html(window.localStorage.getItem("date"));
-            }
-            $("#submitButton").click(function(){
-                window.localStorage.setItem("date",$("#datePicker").val());
-                window.localStorage.setItem("weight",$('input:radio[name=optionsRadios]:checked').val());
-                $("#message").html("SUCCESSFUL UPDATE");
-                $("#currentWeight").html(window.localStorage.getItem("weight"));
-                $("#currentDate").html(window.localStorage.getItem("date"));
-            });
-        </script>
-    </body> 
+<div class="content container-fluid">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h1>Admin</h1>
+
+            <div class="content-left">
+                Current Weight: <span id="currentWeight"></span>
+                <br> Current Appointment Date: <span id="currentDate"></span>
+                <br>
+                <br>
+                CHANGE
+                <br>
+                Weight:
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="Less than 15kg" checked>
+                        Less than 15kg
+                    </label>
+                </div>
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="15-30kg">
+                        15-30kg
+                    </label>
+                </div>
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios3" value="Greater than 30kg">
+                        Greater than 30kg
+                    </label>
+                </div>
+                Appointment: <input id="datePicker" type="date" name="bday">
+                <button id="submitButton">Update</button>
+                <p id="message"></p>
+            </div>
+        </div>
+    </div>
+
+</div>
+<!-- FOOTER -->
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+    <div class="container">
+        <a role="button" class="btn btn-primary btn-lg btn-block" href="index.html">HOME</a>
+    </div>
+</nav>
+<script>
+    if (window.localStorage.getItem("weight") !== null) {
+        $("#currentWeight").html(window.localStorage.getItem("weight"));
+    }
+    if (window.localStorage.getItem("date") !== null) {
+        $("#currentDate").html(window.localStorage.getItem("date"));
+    }
+    $("#submitButton").click(function () {
+        window.localStorage.setItem("date", $("#datePicker").val());
+        window.localStorage.setItem("weight", $('input:radio[name=optionsRadios]:checked').val());
+        $("#message").html("SUCCESSFUL UPDATE");
+        $("#currentWeight").html(window.localStorage.getItem("weight"));
+        $("#currentDate").html(window.localStorage.getItem("date"));
+    });
+</script>
+</body>
 </html>
