keep consistent layout for index.html

--- a/www/app.html
+++ b/www/app.html
@@ -80,16 +80,23 @@
                     the first of its kind in the world.
                 </p>
                 <img src="img/app2.png"/>
+
                 <p>
                     This application will guide you and your child through the entire colonoscopy preparation. Our goal
                     is to make the colon prep experience easier for the patients. This will improve patient satisfaction
                     and result in a more accurate diagnostic procedure for the physicians.
                 </p>
 
-                <p>
-                    - The Stony Brook Department of Pediatric Gastroenterology
-                </p>
-                <img id="children_logo" src="img/children_logo.png"/>
+                <div class="row">
+                    <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8">
+                        <h4 class="byliner">
+                            - The Stony Brook Department of Pediatric Gastroenterology
+                        </h4>
+                    </div>
+                    <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"><img id="children_logo"
+                                                                          src="img/children_logo.png"/></div>
+                </div>
+
             </div>
         </div>
     </div>
