--- a/www/index.html
+++ b/www/index.html
@@ -18,52 +18,68 @@
     under the License.
 -->
 <html>
-    <head>
-        <title>Stony Brook Children's Hospital Colonoscopy Prep App</title>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <!-- CDN FILES -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- LOCAL FILES -->
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </head>
-    <body>
-        <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
-    </div>
+<head>
+    <title>Stony Brook Children's Hospital Colonoscopy Prep App</title>
+    <meta charset="utf-8"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
+    <!-- CDN FILES -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- LOCAL FILES -->
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
+</head>
+<body>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">HOME</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
-        <li><a href="admin.html">ADMIN</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">HOME</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
+                <li><a href="admin.html">ADMIN</a></li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
 </nav>
-       <a role="button" href="app.html" class="btn btn-default btn-lg btn-block">What is this App?</a>
-        <a role="button" href="colon.html" class="btn btn-default btn-lg btn-block">What is a Colonoscopy?</a>
-        <a role="button" href="video.html" class="btn btn-success btn-lg btn-block">Video Tutorial</a>
-        <a role="button" href="prep.html" class="btn btn-danger btn-lg btn-block">Start Prep</a>
-    </body> 
+
+
+<div class="content container-fluid">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <a role="button" href="app.html" class="btn btn-default btn-lg btn-block">What is this App?</a>
+            <a role="button" href="colon.html" class="btn btn-default btn-lg btn-block">What is a Colonoscopy?</a>
+            <a role="button" href="video.html" class="btn btn-success btn-lg btn-block">Video Tutorial</a>
+            <a role="button" href="prep.html" class="btn btn-danger btn-lg btn-block">Start Prep</a>
+        </div>
+    </div>
+</div>
+
+
+</body>
 </html>
