--- a/platforms/android/assets/www/app.html
+++ b/platforms/android/assets/www/app.html
@@ -18,54 +18,100 @@
     under the License.
 -->
 <html>
-    <head>
-        <title>Stony Brook Children's Hospital Colonoscopy Prep App</title>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <!-- BOOTSTRAP AND JQUERY FILES -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- LOCAL FILES -->
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </head>
-    <body>
-        <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+<head>
+    <title>Stony Brook Children's Hospital Colonoscopy Prep App</title>
+    <meta charset="utf-8"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
+    <!-- BOOTSTRAP AND JQUERY FILES -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- LOCAL FILES -->
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
+</head>
+<body>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">HOME</a></li>
+                <li class="active"><a href="faq.html">FAQ</a></li>
+                <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
+                <li><a href="admin.html">ADMIN</a></li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+<div class="content container-fluid">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h1>What's this App?</h1>
+
+            <div class="content">
+                <img src="img/app1.jpg"/>
+
+                <p>One of the most-difficult parts of a colonoscopy takes place on the day before the procedure when
+                    patients must clean out (or “prep”) their bowels so that the doctors can
+                    better visualize the lower intestines. The software that you are now using was designed by the
+                    department of pediatric gastroenterology at Stony Brook Children’s Hospital and it is believed to be
+                    the first of its kind in the world.
+                </p>
+                <img src="img/app2.png"/>
+
+                <p>
+                    This application will guide you and your child through the entire colonoscopy preparation. Our goal
+                    is to make the colon prep experience easier for the patients. This will improve patient satisfaction
+                    and result in a more accurate diagnostic procedure for the physicians.
+                </p>
+
+                <div class="row">
+                    <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8">
+                        <h4 class="byliner">
+                            - The Stony Brook Department of Pediatric Gastroenterology
+                        </h4>
+                    </div>
+                    <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"><img id="children_logo"
+                                                                          src="img/children_logo.png"/></div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">HOME</a></li>
-        <li class="active"><a href="faq.html">FAQ</a></li>
-        <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
-        <li><a href="admin.html">ADMIN</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+</div>
+
+
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+    <div class="container">
+        <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a>
+        </button>
+    </div>
 </nav>
-       <h1> APP</h1>
-        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-          <div class="container">
-            <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a></button>
-          </div>
-        </nav>
-    </body> 
+
+<script type="text/javascript" src="js/custom.js"></script>
+
+</body>
 </html>
