Fixed video on android.  Make sure to properly encode the video with handbrake

--- a/platforms/android/assets/www/video.html
+++ b/platforms/android/assets/www/video.html
@@ -21,7 +21,10 @@
     <head>
         <script>
             function init() {
-                enableVideoClicks();
+                var video = document.getElementById('prep');
+                video.addEventListener('click',function(){
+                    cordova.plugins.videoPlayer.play("file:///android_asset/www/video/BigBuck.m4v"); 
+                },false);
             }
 
             function enableVideoClicks() {
