Fixed some visual things and finished the colonoscopy prep page

--- a/www/colon.html
+++ b/www/colon.html
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+            <a class="navbar-brand" href="#">Colonscopy Prep App</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -85,9 +85,7 @@
                 </div>
 
 
-                <p> a colonoscopy is an examination in which a small
-                    ************************************************
-                    ************************************************ *************************** *********************
+                <p> a colonoscopy is an examination in which a small flexible tube is inserted through the child's rectum inot the colon. The tube has a tiny video camera at the tip, allowing the physician to observe the tissue on a video monitor. In addition, the colonoscope has a channel through which a biopsy forceps (similar to a tweezer) can be inserted, allowing small tissue samples to be taken.
                 </p>
 
             </div>
@@ -99,8 +97,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
     <div class="container">
-        <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a>
-        </button>
+        <a href="index.html" role="button" class="btn btn-primary btn-lg btn-block">HOME</a>
     </div>
 </nav>
 
