--- a/www/video.html
+++ b/www/video.html
@@ -67,7 +67,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+      <a class="navbar-brand" href="#">Colonoscopy Prep App</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,7 +87,7 @@
         </video>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
-            <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a></button>
+            <a href="index.html" role="button" class="btn btn-primary btn-lg btn-block">HOME</a>
           </div>
         </nav>
     </body> 
