--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -51,7 +51,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+            <a class="navbar-brand" href="#">Colonoscopy Prep App</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
