--- a/www/faq.html
+++ b/www/faq.html
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Stony Brook Children's Hospital</a>
+            <a class="navbar-brand" href="index.html">Colonoscopy Prep App</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
