fixed some bad links and img paths. In addition I fixed Written Instructions and continuing work on the  Interactive Prep

--- a/platforms/android/assets/www/written.html
+++ b/platforms/android/assets/www/written.html
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+            <a class="navbar-brand" href="#">Colonoscopy Prep App</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -70,7 +70,7 @@
 <div class="content container-fluid">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h1>What's this App?</h1>
+            <h1>WRITTEN INSTRUCTIONS</h1>
 
             <div class="content">
 
@@ -93,6 +93,8 @@
                         ADMIN panel
                     </li>
                 </ul>
+
+                <a role="button" href="written00.html" class="btn btn-success btn-lg btn-block ">START</a>
             </div>
         </div>
     </div>
@@ -102,8 +104,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
     <div class="container">
-        <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a>
-        </button>
+        <a href="index.html" role="button" class="btn btn-primary btn-lg btn-block">HOME</a>
     </div>
 </nav>
 
