--- a/www/written.html
+++ b/www/written.html
@@ -70,7 +70,7 @@
 <div class="content container-fluid">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h1>What's this App?</h1>
+            <h1>WRITTEN INSTRUCTIONS</h1>
 
             <div class="content">
 
@@ -93,6 +93,8 @@
                         ADMIN panel
                     </li>
                 </ul>
+
+                <a role="button" href="written00.html" class="btn btn-success btn-lg btn-block ">START</a>
             </div>
         </div>
     </div>
