--- a/platforms/android/assets/www/colon.html
+++ b/platforms/android/assets/www/colon.html
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+            <a class="navbar-brand" href="#">Colonscopy Prep App</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
