--- a/platforms/android/assets/www/prep.html
+++ b/platforms/android/assets/www/prep.html
@@ -61,10 +61,11 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-        <h1> PREP </h1>
+    <h3> PREP</h3>
+    <p> Please press NEXT to BEGIN the interactive colonoscopy prep.</p>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
-            <button href="index.html" type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">HOME</a></button>
+            <a role="button" class="btn btn-success btn-lg btn-block" href="prep01.html">NEXT</a>
           </div>
         </nav>
     </body> 
