--- a/www/index.html
+++ b/www/index.html
@@ -74,12 +74,28 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <a role="button" href="app.html" class="btn btn-default btn-lg btn-block">What is this App?</a>
             <a role="button" href="colon.html" class="btn btn-default btn-lg btn-block">What is a Colonoscopy?</a>
-            <a role="button" href="video.html" class="btn btn-success btn-lg btn-block">Video Tutorial</a>
-            <a role="button" href="prep.html" class="btn btn-danger btn-lg btn-block">Start Prep</a>
+            <a id="video_btn" role="button" href="video.html" class="btn btn-success btn-lg btn-block">Video Tutorial</a>
+            <a id="writ_btn" role="button" href="#" class="btn btn-danger btn-lg btn-block">Written Instructions</a>
+            <a id="prep_btn" role="button" href="#" class="btn btn-danger btn-lg btn-block">Interactive Prep</a>
         </div>
     </div>
 </div>
 
-
+    <script type="text/javascript">
+        $(function(){
+            if(window.localStorage.getItem("sawVideo") === "true"){
+                $("#prep_btn").removeClass();
+                $("#prep_btn").addClass("btn btn-success btn-lg btn-block");
+                $("#prep_btn").attr("href","prep.html");
+                $("#writ_btn").removeClass();
+                $("#writ_btn").addClass("btn btn-success btn-lg btn-block");
+                $("#writ_btn").attr("href","written.html");
+                $("#video_btn").removeClass();
+                $("#video_btn").addClass("btn btn-primary btn-lg btn-block");
+            }else{
+                window.localStorage.setItem("sawVideo", "false");
+            }
+        });
+    </script>
 </body>
 </html>
