--- a/www/prep.html
+++ b/www/prep.html
@@ -47,7 +47,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Colonoscopy Prep App</a>
+      <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,10 +61,11 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-        <h1> PREP </h1>
+    <h3> PREP</h3>
+    <p> Please press NEXT to BEGIN the interactive colonoscopy prep.</p>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
-           <a href="index.html" role="button" class="btn btn-primary btn-lg btn-block">HOME</a>
+            <a role="button" class="btn btn-success btn-lg btn-block" href="prep01.html">NEXT</a>
           </div>
         </nav>
     </body> 
