--- a/www/video.html
+++ b/www/video.html
@@ -90,5 +90,11 @@
             <a href="index.html" role="button" class="btn btn-primary btn-lg btn-block">HOME</a>
           </div>
         </nav>
+        <script type="text/javascript">
+        $(function(){
+            window.localStorage.setItem("sawVideo","true");
+            alert(window.localStorage.getItem("sawVideo"));
+        });
+        </script>
     </body> 
 </html>
