--- a/www/prep01.html
+++ b/www/prep01.html
@@ -41,28 +41,11 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">HOME</a></li>
-        <li class="active"><a href="faq.html">FAQ</a></li>
-        <li><a href="written.html">WRITTEN INSTRUCTIONS</a></li>
-        <li><a href="admin.html">ADMIN</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
     <h3> PREP:Step 1</h3>
-        <img src="img/ex-lax.png"/><br>
+        <img src="img/ex-lax.png" class="img-responsive" alt="Responsive image"/><br>
         Have your child take 1 Ex-Lax Chocolate square.
         Press DONE when your child has finished the chocolate.
         <a role="button" class="btn btn-success btn-lg btn-block" href="prep02.html">DONE</a>
