--- a/www/video.html
+++ b/www/video.html
@@ -88,7 +88,7 @@
   </div><!-- /.container-fluid -->
 </nav>
        <h1> Video </h1>
-       <video id="prep" autobuffer width="360" height="240">
+       <video id="prep" autobuffer width="360" height="240" poster="video/placeholder.jpg">
             <source src="video/m4v/prep.m4v">
         </video>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
